--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "builds": [
         {
-            "src": "backend/package.json",
+            "src": "backend/dist/src/index.js",
             "use": "@vercel/node"
         },
         {
