--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,8 @@
     "builds": [
         {
             "src": "backend/dist/src/index.js",
-            "use": "@vercel/node"
+            "use": "@vercel/node",
+            "config": { "includeFiles": ["backend/dist/**"] }
         },
         {
             "src": "frontend/package.json",
