--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,8 @@
 {
     "builds": [
         {
-            "src": "backend/dist/src/index.js",
-            "use": "@vercel/node",
-            "config": { "includeFiles": ["backend/dist/**"] }
+            "src": "backend/src/index.ts",
+            "use": "@vercel/node"
         }
     ],
     "rewrites": [
