--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
     "builds": [
         {
-            "src": "backend/src/index.ts",
+            "src": "backend/package.json",
             "use": "@vercel/node"
         }
     ],
