--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,5 @@
 {
+    "version": 2,
     "builds": [
         {
             "src": "backend/package.json",
@@ -8,7 +9,7 @@
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "/backend/$1"
+            "destination": "/backend/src/"
         }
     ]
 }
