--- a/vercel.json
+++ b/vercel.json
@@ -9,7 +9,7 @@
     "rewrites": [
         {
             "source": "/api/(.*)",
-            "destination": "/backend/src/"
+            "destination": "/backend/src/function.ts"
         }
     ]
 }
