devops: trying to deploy nodejs app (11)

--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
     ],
     "rewrites": [
         {
-            "source": "/api/(.*)",
+            "source": "/api/:path",
             "destination": "/backend/src/function.ts"
         }
     ]
