--- a/vercel.json
+++ b/vercel.json
@@ -4,9 +4,17 @@
         {
             "src": "backend/src/function.ts",
             "use": "@vercel/node"
+        },
+        {
+            "src": "frontend/src/package.json",
+            "use": "@vercel/next"
         }
     ],
     "rewrites": [
+        {
+            "source": "/web/(.*)",
+            "destination": "/frontend/src/$1"
+        },
         {
             "source": "/(.*)",
             "destination": "/backend/src/function.ts"
