devops: trying to deploy nodejs app and nexts js together (3)

--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -9,7 +9,7 @@
     "rewrites": [
         {
             "source": "/(.*)",
-            "destination": "/backend/src/function.ts"
+            "destination": "/src/function.ts"
         }
     ]
 }
